objects/AcctSeedERP__Inventory_Balance_History__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Available_Quantity__c</fullName>
        <formula>AcctSeedERP__Purchasing_Quantity__c + AcctSeedERP__Inbound_Quantity__c - AcctSeedERP__Sales_Order_Quantity__c - AcctSeedERP__Manufacturing_Quantity__c - AcctSeedERP__Outbound_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inbound_Quantity__c</fullName>
        <label>Inbound Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inventory_Balance__c</fullName>
        <label>Inventory Balance</label>
        <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
        <relationshipLabel>Inventory Quantity Available Histories</relationshipLabel>
        <relationshipName>Inventory_Balance_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Inventory Quantity Available Histories</relationshipLabel>
        <relationshipName>Inventory_Balance_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufacturing_Quantity__c</fullName>
        <label>Manufacturing Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Outbound_Quantity__c</fullName>
        <label>Outbound Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchasing_Quantity__c</fullName>
        <label>Purchasing Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order_Quantity__c</fullName>
        <label>Sales Order Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Quantity Available History</label>
    <listViews>
        <fullName>AcctSeedERP__Snapshots</fullName>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Inventory_Balance__c</columns>
        <columns>AcctSeedERP__Available_Quantity__c</columns>
        <columns>AcctSeedERP__Inbound_Quantity__c</columns>
        <columns>AcctSeedERP__Manufacturing_Quantity__c</columns>
        <columns>AcctSeedERP__Outbound_Quantity__c</columns>
        <columns>AcctSeedERP__Purchasing_Quantity__c</columns>
        <columns>AcctSeedERP__Sales_Order_Quantity__c</columns>
        <columns>AcctSeedERP__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Snapshots</label>
    </listViews>
    <nameField>
        <displayFormat>IBH-{00000}</displayFormat>
        <label>Inventory Quantity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Quantity Available Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>